# Satya

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  AWS_DEPLOYMENT_GUIDE.md  BLOCKERS_AND_NOTES.md  COMPLETION_PROMPTS.md  Dockerfile  FRONTEND_INTEGRATION_PLAN.md  FULLSTACK_INTEGRATION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_TASKS.md  INTEGRATION_PLAN.md  Move.toml  QUICK_START_COMPLETION.md  README.md  SECURITY_AUDIT_REPORT.md  UPLOAD_TEST_INSTRUCTIONS.md  WALRUS_CONFIGURATION_ISSUES.md  WALRUS_TEST_RESULTS.md  deploy-script.sh  docker-compose.yml  instance-info.txt  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  python_security_audit.json  start-fullstack.sh  stop-fullstack.sh  sui-content-strategy.md  tailwind.config.ts  test-nautilus.sh  test_nautilus_endpoint.py  tsconfig.json  user-data.sh  vitest.config.ts
api/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json
config/: README.md  environment.ts
contracts/: .coverage_map.mvcov  Move.toml
flowTest/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  MAKEFILE_ANALYSIS.md  NAUTILUS_WEATHER_TESTING_PLAN.md  NAUTILUS_WEATHER_TEST_RESULTS.md  SEAL_INTEGRATION_REPORT.md  SERVER_README.md  TEE_INTEGRATION_COMPLETE.md  (+33 more)
integrations/nautilus/: Cargo.toml  Containerfile  Makefile  README.md  client.ts  configure_enclave.sh  package.json
integrations/nautilus/enclave-server/: Cargo.toml
integrations/nautilus/move/enclave/: Move.toml
integrations/nautilus/move/enclave/sources/: enclave.move
integrations/nautilus/move/marketplace/: Move.toml
integrations/nautilus/move/marketplace/sources/: marketplace.move
integrations/nautilus/move/marketplace/tests/: marketplace_tests.move
integrations/nautilus/src/: common.rs  main.rs
integrations/nautilus/src/apps/: mod.rs
integrations/nautilus/src/apps/satya/: attestation.rs  mod.rs  secure_storage.rs
(+447 files in other folders)
