[package]
name = "nautilus-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "nautilus-server"
path = "src/main.rs"

[features]
default = []
satya = []

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1.6"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# File handling
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
