[package]
name = "satya-nautilus-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"

# Cryptography
fastcrypto = "0.1"
rand = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AWS Nitro
aws-nitro-enclaves-nsm-api = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = ["marketplace"]
marketplace = []
test-mode = []

[dev-dependencies]
mockito = "1.0"